--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,15 @@
         </activity>
         <activity android:name=".EditProfileActivity" />
         <activity android:name=".RegisterActivity" />
+        <activity android:name=".MainView" />
+        <activity android:name=".ProfileView" />
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".ChatActivity" />
+        <activity android:name=".AjustesActivity" />
+
+
+
+
 
 
 
