--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         <activity
             android:name=".LoginActivity"
             android:exported="true"
-            android:theme="@style/Theme.Kollab.SplashScreen">
+            android:theme="@style/Theme.Kollab.SplashScreen"
+            >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
