Parte recycleview hecha, utilizado para crear lista de chats que se va actualiando cada vez que hay un match

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ChatListActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Kollab"/>
         <activity android:name=".EditProfileActivity"
             android:exported="true"
             android:theme="@style/Theme.Kollab"/>
